--- a/requirements.txt
+++ b/requirements.txt
@@ -1,314 +1,7 @@
-alabaster==0.7.13
-annotated-types==0.5.0
-anyio==3.7.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asn1crypto==1.5.1
-astroid==2.15.0
-asttokens==2.2.1
-attrs==22.2.0
-Babel==2.12.1
-backcall==0.2.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.11.2
-bitarray==2.7.3
-bkcharts==0.2
-bleach==6.0.0
-blinker==1.4
-bokeh==3.2.2
-boto==2.49.0
-Bottleneck==1.3.7
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.2.0
-click==8.1.3
-cloudpickle==2.2.1
-cmake==3.27.2
-colorama==0.4.6
-comm==0.1.4
-command-not-found==0.3
-comtypes==1.1.14
-confluent-kafka==2.2.0
-contextlib2==21.6.0
-contourpy==1.1.0
-coverage==7.3.0
-cryptography==39.0.2
-cycler==0.11.0
-Cython==0.29.36
-cytoolz==0.12.1
-dask==2023.3.1
-datashape==0.5.2
-dbus-python==1.2.18
-debugpy==1.6.7.post1
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.7
-distlib==0.3.7
-distributed==2023.3.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-dnspython==2.4.2
-docopt==0.6.2
-docutils==0.19
-eli5==0.13.0
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-executing==1.2.0
-fairscale==0.4.13
+confluent_kafka==2.2.0
 fastapi==0.103.1
-fastcache==1.1.0
-fastjsonschema==2.18.0
-filelock==3.10.0
-fire==0.5.0
-Flask==2.2.3
-Flask-Cors==3.0.10
-fonttools==4.42.1
-fqdn==1.5.1
-fsspec==2023.6.0
-gevent==22.10.2
-glob2==0.7
-graphviz==0.20.1
-greenlet==2.0.2
-h11==0.14.0
-h5py==3.9.0
-hdbscan==0.8.33
-HeapDict==1.0.1
-html5lib==1.1
-httplib2==0.20.2
-hurst==0.0.5
-hypothesis==6.82.6
-idna==3.4
-imageio==2.31.1
-imagesize==1.4.1
-importlib-metadata==4.6.4
-iniconfig==2.0.0
-ipykernel==6.21.3
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-isort==5.12.0
-itsdangerous==2.1.2
-jdcal==1.4.1
-jedi==0.18.2
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpointer==2.4
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab-launcher==0.13.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-keyring==23.5.0
-kiwisolver==1.4.4
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy-object-proxy==1.9.0
-lazy_loader==0.3
-lit==16.0.6
--e git+https://github.com/facebookresearch/llama.git@4e2485887fbc344cc1aba0d52b3ac2e825fe80ec#egg=llama
-llvmlite==0.39.1
-locket==1.0.0
-lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mistune==2.0.5
-more-itertools==9.1.0
-mpmath==1.3.0
-msgpack==1.0.5
-msgpack-python==0.5.6
-multipledispatch==0.6.0
-munch==2.5.0
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.2.10
-nbformat==5.7.3
-nest-asyncio==1.5.7
-netifaces==0.11.0
-networkx==3.0
-nltk==3.8.1
-nose==1.3.7
-notebook==6.5.3
-notebook_shim==0.2.3
-numba==0.56.4
-numexpr==2.8.4
-numpy==1.23.5
-numpydoc==1.5.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.0
-odo==0.5.0
-olefile==0.46
-openpyxl==3.1.2
-overrides==7.4.0
-packaging==23.0
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-partd==1.3.0
-path==16.7.1
-path.py==12.5.0
-pathlib2==2.3.7.post1
-patsy==0.5.3
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-pipreqs==0.4.13
-pkginfo==1.9.6
-platformdirs==3.10.0
-pluggy==1.0.0
-ply==3.11
-prometheus-client==0.17.1
-prompt-toolkit==3.0.38
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pwlf==2.2.1
-py==1.11.0
-pycodestyle==2.10.0
-pycosat==0.6.3
-pycparser==2.21
-pycrypto==2.6.1
-pycurl==7.45.2
 pydantic==2.3.0
-pydantic-settings==2.0.3
-pydantic_core==2.6.3
-pyDOE==0.3.8
-pyflakes==3.0.1
-Pygments==2.14.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pylint==2.17.0
-pymongo==4.3.3
-pyodbc==4.0.35
-pyOpenSSL==23.0.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.2.2
-pytest-arraydiff==0.5.0
-pytest-astropy==0.10.0
-pytest-astropy-header==0.2.2
-pytest-cov==4.1.0
-pytest-doctestplus==0.12.1
-pytest-filter-subpackage==0.1.2
-pytest-mock==3.11.1
-pytest-openfiles==0.5.0
-pytest-remotedata==0.4.0
-python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-pytoolconfig==1.2.5
-pytz==2022.7.1
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==25.0.1
-QtAwesome==1.2.3
-qtconsole==5.4.1
-QtPy==2.3.0
-rdp==0.8
-regex==2023.8.8
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rope==1.7.0
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
-scikit-image==0.20.0
-scikit-learn==1.2.2
-scipy==1.10.1
-seaborn==0.12.2
-SecretStorage==3.3.1
-Send2Trash==1.8.0
-sentencepiece==0.1.99
-simplegeneric==0.8.1
-singledispatch==4.0.0
-six==1.16.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcollections==2.1.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-Sphinx==6.1.3
-sphinxcontrib-applehelp==1.0.7
-sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-htmlhelp==2.0.4
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.9
-sphinxcontrib-websupport==1.2.4
-SQLAlchemy==2.0.7
-stack-data==0.6.2
-starlette==0.27.0
-statsmodels==0.13.5
-sympy==1.11.1
-systemd-python==234
-tabulate==0.9.0
-tblib==1.7.0
-termcolor==2.3.0
-terminado==0.17.1
-testpath==0.6.0
-threadpoolctl==3.2.0
-tifffile==2023.8.12
-tinycss2==1.2.1
-tomli==2.0.1
-tomlkit==0.12.1
-toolz==0.12.0
-torch==2.0.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-triton==2.0.0
-typing==3.7.4.3
-typing_extensions==4.7.1
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodecsv==0.14.1
-uri-template==1.3.0
-urllib3==1.26.15
-utilp==0.0.10
+pydantic_settings==2.0.3
+PyYAML
+setuptools==59.6.0
 uvicorn==0.23.2
-virtualenv==20.24.2
-wadllib==1.3.6
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.2
-Werkzeug==2.2.3
-widgetsnbextension==4.0.5
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.15.0
-xlrd==2.0.1
-XlsxWriter==3.0.9
-xlwt==1.3.0
-xyzservices==2023.7.0
-yarg==0.1.9
-zict==2.2.0
-zipp==1.0.0
-zope.event==5.0
-zope.interface==6.0
