Added field validation mechanisms for int (bool can be added but that was generalized using normalization)

--- a/xposer/sample_app/http_post_uvicorn_fastapi/sample_app_http_config.yaml
+++ b/xposer/sample_app/http_post_uvicorn_fastapi/sample_app_http_config.yaml
@@ -9,6 +9,7 @@ xp_log_to_kafka_server_string: "0.0.0.0:9092"
 
 # XPController level config
 xpcontroller_someparam: "bak"
+xpcontroller_uvicorn_port: "8001"
 
 # App level config
 xpapp_bar: "baz"
