--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.5.0
 anyio==3.7.1
 astroid==2.15.6
 asttokens==2.4.0
+certifi==2023.7.22
 click==8.1.7
 colorama==0.4.6
 confluent-kafka==2.2.0
@@ -12,6 +13,8 @@ fastapi==0.103.1
 grpcio==1.58.0
 grpcio-tools==1.58.0
 h11==0.14.0
+httpcore==0.18.0
+httpx==0.25.0
 icecream==2.1.3
 idna==3.4
 isort==5.12.0
@@ -20,6 +23,7 @@ mccabe==0.7.0
 nest-asyncio==1.5.8
 platformdirs==3.10.0
 protobuf==4.24.3
+psutil==5.9.5
 pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
