--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,41 @@ anyio==3.7.1
 astroid==2.15.6
 asttokens==2.4.0
 certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 confluent-kafka==2.2.0
+cryptography==41.0.4
 dill==0.3.7
+docopt==0.6.2
+docutils==0.20.1
 exceptiongroup==1.1.3
 executing==2.0.0
 fastapi==0.103.1
 grpcio==1.58.0
 grpcio-tools==1.58.0
 h11==0.14.0
-httpcore==0.18.0
-httpx==0.25.0
 icecream==2.1.3
 idna==3.4
+importlib-metadata==6.8.0
 isort==5.12.0
+jaraco.classes==3.3.0
+jeepney==0.8.0
+keyring==24.2.0
 lazy-object-proxy==1.9.0
+markdown-it-py==3.0.0
 mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==10.1.0
 nest-asyncio==1.5.8
+nh3==0.2.14
+pipreqs==0.4.13
+pkginfo==1.9.6
 platformdirs==3.10.0
 protobuf==4.24.3
-psutil==5.9.5
+psutil==5.9.6
+pycparser==2.21
 pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
@@ -31,12 +45,22 @@ Pygments==2.16.1
 pylint==2.17.5
 python-dotenv==1.0.0
 PyYAML==6.0.1
+readme-renderer==42.0
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.6.0
+SecretStorage==3.3.3
 shortuuid==1.0.11
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 tomli==2.0.1
 tomlkit==0.12.1
+twine==4.0.2
 typing_extensions==4.7.1
+urllib3==2.0.6
 uvicorn==0.23.2
 wrapt==1.15.0
+yarg==0.1.9
+zipp==3.17.0
