--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ fastapi==0.103.1
 grpcio==1.58.0
 grpcio-tools==1.58.0
 h11==0.14.0
+httpcore==0.18.0
+httpx==0.25.0
 icecream==2.1.3
 idna==3.4
 importlib-metadata==6.8.0
