--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,136 @@
-annotated-types==0.5.0
-anyio==3.7.1
-astroid==2.15.6
-asttokens==2.4.0
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.0
+accelerate==0.29.2
+aiofiles==23.2.1
+aiohttp==3.9.4
+aiosignal==1.3.1
+altair==5.3.0
+anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1710965072196/work
+annotated-types==0.6.0
+anyio==4.3.0
+archspec @ file:///croot/archspec_1709217642129/work
+attrs==23.2.0
+bitsandbytes==0.43.1
+boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
+Brotli @ file:///work/perseverance-python-buildout/croot/brotli-split_1698805593785/work
+certifi @ file:///croot/certifi_1707229174982/work/certifi
+cffi @ file:///croot/cffi_1700254295673/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 click==8.1.7
-colorama==0.4.6
-confluent-kafka==2.2.0
-cryptography==41.0.4
-dill==0.3.7
-docopt==0.6.2
-docutils==0.20.1
-exceptiongroup==1.1.3
-executing==2.0.0
-fastapi==0.103.1
-grpcio==1.58.0
-grpcio-tools==1.58.0
+conda @ file:///croot/conda_1710772050586/work
+conda-content-trust @ file:///work/perseverance-python-buildout/croot/conda-content-trust_1698882886606/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1706733287605/work/src
+conda-package-handling @ file:///work/perseverance-python-buildout/croot/conda-package-handling_1698851267218/work
+conda_package_streaming @ file:///work/perseverance-python-buildout/croot/conda-package-streaming_1698847176583/work
+contourpy==1.2.1
+cryptography @ file:///croot/cryptography_1710350347627/work
+cycler==0.12.1
+datasets==2.18.0
+dill==0.3.8
+distro @ file:///work/perseverance-python-buildout/croot/distro_1701732366176/work
+docstring_parser==0.16
+einops==0.7.0
+fastapi==0.110.1
+ffmpy==0.3.2
+filelock==3.13.4
+fire==0.6.0
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.3.1
+gradio==4.26.0
+gradio_client==0.15.1
 h11==0.14.0
-httpcore==0.18.0
-httpx==0.25.0
-icecream==2.1.3
-idna==3.4
-importlib-metadata==6.8.0
-isort==5.12.0
-jaraco.classes==3.3.0
-jeepney==0.8.0
-keyring==24.2.0
-lazy-object-proxy==1.9.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.22.2
+idna @ file:///work/perseverance-python-buildout/croot/idna_1698845632828/work
+importlib_resources==6.4.0
+Jinja2==3.1.3
+jsonpatch @ file:///croot/jsonpatch_1710807507480/work
+jsonpointer==2.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+libmambapy @ file:///croot/mamba-split_1712091911343/work/libmambapy
 markdown-it-py==3.0.0
-mccabe==0.7.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
 mdurl==0.1.2
-more-itertools==10.1.0
-nest-asyncio==1.5.8
-nh3==0.2.14
-pipreqs==0.4.13
-pkginfo==1.9.6
-platformdirs==3.10.0
-protobuf==4.24.3
-psutil==5.9.6
-pycparser==2.21
-pydantic==2.3.0
-pydantic-settings==2.0.3
-pydantic_core==2.6.3
-Pygments==2.16.1
-pylint==2.17.5
-python-dotenv==1.0.0
+menuinst @ file:///croot/menuinst_1706732933928/work
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+orjson==3.10.1
+packaging @ file:///croot/packaging_1710807400464/work
+pandas==2.2.2
+peft==0.10.0
+pillow==10.3.0
+platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
+pluggy @ file:///work/perseverance-python-buildout/croot/pluggy_1698805497733/work
+protobuf==5.26.1
+psutil==5.9.8
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pycosat @ file:///work/perseverance-python-buildout/croot/pycosat_1698863456259/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.7.0
+pydantic_core==2.18.1
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.1.2
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
-readme-renderer==42.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.6.0
-SecretStorage==3.3.3
-shortuuid==1.0.11
+referencing==0.34.0
+regex==2023.12.25
+requests @ file:///croot/requests_1707355572290/work
+rich==13.7.1
+rpds-py==0.18.0
+ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
+ruff==0.3.7
+safetensors==0.4.3
+scipy==1.13.0
+semantic-version==2.10.0
+sentencepiece==0.2.0
+setuptools==68.2.2
+shellingham==1.5.4
+shtab==1.7.1
 six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
-tomli==2.0.1
-tomlkit==0.12.1
-twine==4.0.2
-typing_extensions==4.7.1
-urllib3==2.0.6
-uvicorn==0.23.2
-wrapt==1.15.0
-yarg==0.1.9
-zipp==3.17.0
+sniffio==1.3.1
+sse-starlette==2.1.0
+starlette==0.37.2
+sympy==1.12
+termcolor==2.4.0
+tokenizers==0.15.2
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.2.2
+tqdm @ file:///work/perseverance-python-buildout/croot/tqdm_1701735729845/work
+transformers==4.39.3
+trl==0.8.3
+truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
+typer==0.12.3
+typing_extensions==4.11.0
+tyro==0.8.3
+tzdata==2024.1
+urllib3 @ file:///croot/urllib3_1707770551213/work
+uvicorn==0.29.0
+websockets==11.0.3
+wheel==0.41.2
+xxhash==3.4.1
+yarl==1.9.4
+zstandard @ file:///work/perseverance-python-buildout/croot/zstandard_1698847073368/work
