--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,110 @@
-*.iml
+# General
 *.log
 .DS_Store
-.idea
-.project
-.idea
+
+# IntelliJ IDEA / PyCharm
 *.iml
-/data
-/venv
-/out
-/.package-lock.json
-/node_modules
+.idea/
+.project
+
+# macOS
+.DS_Store
+
+# Python
 __pycache__/
 .Python
-*.manifest
-*.spec
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Pip
 pip-log.txt
 pip-delete-this-directory.txt
-/env/
-/dist/
-/build/
-/xposer.egg-info/
+
+# Virtual environments
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# Celery
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Cython debug symbols
+cython_debug/
+
+# Setuptools egg info
 *.egg-info/
-/build/
-/dist/
-/xposer.egg-info/
-/wheels/
-/xposer.egg-info/
-/xposer.egg-info/
+
+# Node.js
+/package-lock.json
+/node_modules/
+
+# Data and output
+/data
+/out
+
+# VS Code
+.vscode/
